@@ -1888,28 +1888,34 @@ GEN     Idealstar(GEN nf, GEN x,long flun);
 GEN     RgC_to_nfC(GEN nf,GEN x);
 GEN     RgM_to_nfM(GEN nf,GEN x);
 GEN     RgX_to_nfX(GEN nf,GEN pol);
+long    ZC_nfval(GEN nf, GEN x, GEN P);
+long    ZC_nfvalrem(GEN nf, GEN x, GEN P, GEN *t);
+int     ZC_prdvd(GEN nf, GEN x, GEN P);
 GEN     algtobasis(GEN nf, GEN x);
 GEN     basistoalg(GEN nf, GEN x);
+GEN     ei_multable(GEN nf, long i);
 GEN     gpnfvalrem(GEN nf, GEN x, GEN pr, GEN *py);
 GEN     ideallist(GEN nf,long bound);
 GEN     ideallist0(GEN nf,long bound, long flag);
 GEN     ideallistarch(GEN nf, GEN list, GEN arch);
+GEN     ideallog(GEN nf,GEN x,GEN bigideal);
 GEN     idealprincipalunits(GEN nf, GEN pr, long e);
 GEN     idealstar0(GEN nf, GEN x,long flag);
 GEN     indices_to_vec01(GEN archp, long r);
 GEN     matalgtobasis(GEN nf, GEN x);
 GEN     matbasistoalg(GEN nf, GEN x);
+GEN     multable(GEN nf, GEN x);
 GEN     nf_to_scalar_or_alg(GEN nf, GEN x);
 GEN     nf_to_scalar_or_basis(GEN nf, GEN x);
 GEN     nfadd(GEN nf, GEN x, GEN y);
 GEN     nfarchstar(GEN nf,GEN x,GEN arch);
+int     nfchecksigns(GEN nf, GEN x, GEN pl);
 GEN     nfdiv(GEN nf, GEN x, GEN y);
 GEN     nfdiveuc(GEN nf, GEN a, GEN b);
 GEN     nfdivrem(GEN nf, GEN a, GEN b);
 GEN     nfembed(GEN nf, GEN x, long k);
 GEN     nfinv(GEN nf, GEN x);
 GEN     nfinvmodideal(GEN nf, GEN x, GEN ideal);
-int     nfchecksigns(GEN nf, GEN x, GEN pl);
 GEN     nfmod(GEN nf, GEN a, GEN b);
 GEN     nfmul(GEN nf,GEN x,GEN y);
 GEN     nfmuli(GEN nf,GEN x,GEN y);
@@ -1922,8 +1928,8 @@ GEN     nfsign_arch(GEN nf,GEN alpha,GEN arch);
 GEN     nfsign_from_logarch(GEN Larch, GEN invpi, GEN archp);
 GEN     nfsqr(GEN nf,GEN x);
 GEN     nfsqri(GEN nf, GEN x);
-GEN     nftrace(GEN nf, GEN x);
 GEN     nfsub(GEN nf, GEN x, GEN y);
+GEN     nftrace(GEN nf, GEN x);
 long    nfval(GEN nf, GEN x, GEN vp);
 long    nfvalrem(GEN nf, GEN x, GEN pr, GEN *py);
 GEN     polmod_nffix(const char *f, GEN rnf, GEN x,int lift);
@@ -1934,23 +1940,19 @@ GEN     rnfbasistoalg(GEN rnf, GEN x);
 GEN     rnfeltnorm(GEN rnf, GEN x);
 GEN     rnfelttrace(GEN rnf, GEN x);
 GEN     set_sign_mod_divisor(GEN nf, GEN x, GEN y, GEN idele, GEN sarch);
-GEN     vec01_to_indices(GEN arch);
-GEN     vecsmall01_to_indices(GEN v);
-GEN     vecmodii(GEN a, GEN b);
-GEN     ideallog(GEN nf,GEN x,GEN bigideal);
-
-GEN     multable(GEN nf, GEN x);
 GEN     tablemul(GEN TAB, GEN x, GEN y);
 GEN     tablemul_ei(GEN M, GEN x, long i);
 GEN     tablemul_ei_ej(GEN M, long i, long j);
 GEN     tablemulvec(GEN M, GEN x, GEN v);
 GEN     tablesqr(GEN tab, GEN x);
-GEN     ei_multable(GEN nf, long i);
-long    ZC_nfval(GEN nf, GEN x, GEN P);
-long    ZC_nfvalrem(GEN nf, GEN x, GEN P, GEN *t);
+GEN     vec01_to_indices(GEN arch);
+GEN     vecmodii(GEN a, GEN b);
+GEN     vecsmall01_to_indices(GEN v);
 GEN     zk_multable(GEN nf, GEN x);
 GEN     zk_scalar_or_multable(GEN, GEN x);
-int     ZC_prdvd(GEN nf, GEN x, GEN P);
+GEN     zkchinese(GEN zkc, GEN x, GEN y);
+GEN     zkchinese1(GEN zkc, GEN x);
+GEN     zkchineseinit(GEN nf, GEN A, GEN B, GEN AB);
 
 /* base4.c */
 
